# Voice-Control-for-android

./: CMakeLists.txt  README.md  mod.json
.github/workflows/: cmake-single-platform.yml
src/: main.cpp
